package AttackLogic;

import Charactor.BasePlayer;

public class IceAttack implements Attackable {

    @Override
    public void attack(BasePlayer enemy) {}
}
