@startuml 03_attacklogic
!pragma layout smetana
skinparam classAttributeIconSize 0
skinparam backgroundColor #FAFBFF
skinparam class {
  BackgroundColor #EEF3FF
  BorderColor #3A5CC5
  HeaderBackgroundColor #84a0f6
  FontColor #FFFFFF
  ArrowColor #2255AA
  AttributeFontColor #222222
}
skinparam interface {
  BackgroundColor #D5F0FF
  BorderColor #0077AA
  HeaderBackgroundColor #005580
}
skinparam note {
  BackgroundColor #FFF9E6
  BorderColor #C8A800
}

title <b>AttackLogic Package – Strategy Pattern</b>

interface Attackable {
  + attack(enemy : BasePlayer) : void
}

class NormalAttack {
  + attack(enemy : BasePlayer) : void
}

class FireAttack {
  + attack(enemy : BasePlayer) : void
}

class IceAttack {
  + attack(enemy : BasePlayer) : void
}

class WindAttack {
  + attack(enemy : BasePlayer) : void
}

NormalAttack ..|> Attackable : implements
FireAttack   ..|> Attackable : implements
IceAttack    ..|> Attackable : implements
WindAttack   ..|> Attackable : implements

note bottom of NormalAttack
  1 HP instant damage
  No cooldown
end note

note bottom of FireAttack
  attack() → no-op
  Controller: burn 2 ticks × 1 HP
  Cooldown: 3 turns
end note

note bottom of IceAttack
  attack() → no-op
  Controller: −1 HP + freeze 1 turn
  Cooldown: 2 turns
end note

note bottom of WindAttack
  attack() → no-op
  Controller: −1 HP + oscillate 1 turn
  Cooldown: 2 turns
end note

@enduml
